--- a/app/src/main/res/layout/activity_edit_property.xml
+++ b/app/src/main/res/layout/activity_edit_property.xml
@@ -311,20 +311,25 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/photosScrollViewLabel">
 
-
-                    <ImageView
-                        android:id="@+id/pickPhoto"
-                        android:layout_width="@dimen/photo_size"
-                        android:layout_height="@dimen/photo_size"
-                        android:padding="25dp"
-                        android:src="@drawable/ic_add_photo_70" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/photoRecyclerView"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        />
+                        android:orientation="horizontal">
 
+                        <ImageView
+                            android:id="@+id/pickPhoto"
+                            android:layout_width="@dimen/photo_size"
+                            android:layout_height="@dimen/photo_size"
+                            android:padding="25dp"
+                            android:src="@drawable/ic_add_photo_70" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/photoRecyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            tools:orientation="horizontal"
+                            />
+                    </LinearLayout>
 
                 </HorizontalScrollView>
 
