--- a/app/src/main/res/layout/photo_description_editor_layout.xml
+++ b/app/src/main/res/layout/photo_description_editor_layout.xml
@@ -10,7 +10,7 @@
         <ImageView
             android:id="@+id/photo"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="270dp"
             />
 
         <EditText
@@ -18,6 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minLines="2"/>
+
+        <CheckBox
+            android:id="@+id/mainCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/set_as_main"
+            android:layout_gravity="end"
+            />
 
     </LinearLayout>
 </layout>
