--- a/app/src/main/res/layout/property_list_item.xml
+++ b/app/src/main/res/layout/property_list_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="com.berete.realestatemanager.Utils"/>
         <import type="android.view.View"/>
         <variable
             name="property"
@@ -11,9 +12,10 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        app:cardElevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp">
+        android:layout_marginVertical="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -31,7 +33,7 @@
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="90dp"
-                    android:layout_height="90dp"/>
+                    android:layout_height="85dp"/>
 
             </androidx.cardview.widget.CardView>
 
@@ -53,7 +55,7 @@
                 android:id="@+id/propertyPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{'$' + String.valueOf(property.price)}"
+                android:text="@{Utils.convertDoubleToCurrency(property.price)}"
                 app:layout_constraintTop_toBottomOf="@id/propertyType"
                 app:layout_constraintLeft_toLeftOf="@id/propertyType"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -69,16 +71,17 @@
                 android:text="@{property.address.locality}"
                 app:layout_constraintTop_toTopOf="@id/propertyType"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="8dp"
                 tools:text="Sherbrook"
-                android:textColor="?attr/colorPrimaryVariant"
+                android:textColor="@color/dark_gray"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 />
 
             <ImageView
                 android:layout_width="65dp"
                 android:layout_height="55dp"
-                android:visibility="@{property.sold ? View.VISIBLE : View.GONE}"
+                android:visibility="@{property.sold ? View.VISIBLE : View.GONE, default=gone}"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/sold"
