--- a/app/src/main/res/layout/property_list_item.xml
+++ b/app/src/main/res/layout/property_list_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="com.berete.realestatemanager.Utils"/>
         <import type="android.view.View"/>
         <variable
             name="property"
@@ -13,7 +14,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp">
+        android:layout_marginVertical="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -53,7 +54,7 @@
                 android:id="@+id/propertyPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{'$' + String.valueOf(property.price)}"
+                android:text="@{Utils.convertDoubleToCurrency(property.price)}"
                 app:layout_constraintTop_toBottomOf="@id/propertyType"
                 app:layout_constraintLeft_toLeftOf="@id/propertyType"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -71,14 +72,15 @@
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginEnd="16dp"
                 tools:text="Sherbrook"
-                android:textColor="?attr/colorPrimaryVariant"
+                android:textColor="@color/dark_gray"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 />
 
             <ImageView
                 android:layout_width="65dp"
                 android:layout_height="55dp"
-                android:visibility="@{property.sold ? View.VISIBLE : View.GONE}"
+                android:visibility="@{property.sold ? View.VISIBLE : View.GONE, default=gone}"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/sold"
