--- a/app/src/main/res/layout/activity_property_detail.xml
+++ b/app/src/main/res/layout/activity_property_detail.xml
@@ -6,13 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:menu="@menu/menu_detail_toolbar" />
+    <include layout="@layout/toolbar"/>
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
