feat loan calculator

--- a/app/src/main/res/layout/activity_edit_property.xml
+++ b/app/src/main/res/layout/activity_edit_property.xml
@@ -54,7 +54,10 @@
                 <Spinner
                     android:id="@+id/typeSpinner"
                     android:layout_width="0dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="7dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/custom_spinner_bg"
                     android:selectedItemPosition="@={property.selectedTypePosition}"
                     app:layout_constraintBottom_toBottomOf="@id/priceEditContainer"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -67,6 +70,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:boxBackgroundColor="@android:color/transparent"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    android:layout_marginStart="7dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
                     app:layout_constraintBottom_toTopOf="@id/surfaceEditContainer"
                     app:layout_constraintLeft_toRightOf="@id/typeSpinner"
                     app:layout_constraintRight_toRightOf="parent"
@@ -86,9 +95,14 @@
                     android:id="@+id/surfaceEditContainer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="7dp"
                     app:boxBackgroundColor="@android:color/transparent"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
                     app:layout_constraintBottom_toTopOf="@id/publicationDateContainer"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/numberOfRoomsEditContainer"
@@ -111,6 +125,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="7dp"
                     app:boxBackgroundColor="@android:color/transparent"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
                     app:layout_constraintBottom_toBottomOf="@id/surfaceEditContainer"
                     app:layout_constraintLeft_toRightOf="@id/surfaceEditContainer"
                     app:layout_constraintRight_toRightOf="parent"
@@ -130,8 +149,13 @@
                     android:id="@+id/publicationDateContainer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     app:boxBackgroundColor="@android:color/transparent"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
                     app:layout_constraintBottom_toTopOf="@id/sold"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -151,7 +175,7 @@
                     android:id="@+id/sold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="12dp"
+                    android:layout_marginVertical="25dp"
                     android:checked="@={property.sold}"
                     android:text="@string/sold_txt"
                     app:layout_constraintBottom_toTopOf="@id/addressContainer"
@@ -167,6 +191,11 @@
                     android:layout_marginEnd="10dp"
                     android:visibility="@{property.sold ? View.VISIBLE : View.GONE}"
                     app:boxBackgroundColor="@android:color/transparent"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
                     app:layout_constraintBottom_toBottomOf="@id/sold"
                     app:layout_constraintHorizontal_weight="2"
                     app:layout_constraintLeft_toRightOf="@id/sold"
@@ -188,6 +217,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:boxBackgroundColor="@android:color/transparent"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
                     app:layout_constraintBottom_toTopOf="@id/localityContainer"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -206,9 +240,14 @@
                     android:id="@+id/localityContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="20dp"
                     app:boxBackgroundColor="@android:color/transparent"
-                    app:layout_constraintBottom_toTopOf="@id/agentSelector"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:layout_constraintBottom_toTopOf="@id/agentSelectorLabel"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/addressContainer">
@@ -223,17 +262,29 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
+                <TextView
+                    android:id="@+id/agentSelectorLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/agent"
+                    android:textColor="?attr/colorPrimaryVariant"
+                    app:layout_constraintTop_toBottomOf="@id/localityContainer"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/agentSelector"
+                    />
+
                 <Spinner
                     android:id="@+id/agentSelector"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:selectedItemPosition="@={property.selectedAgentPosition}"
                     android:spinnerMode="dialog"
                     app:cardCornerRadius="50dp"
                     app:layout_constraintBottom_toTopOf="@id/pointOfInterestsContainer"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/localityContainer"
+                    app:layout_constraintTop_toBottomOf="@id/agentSelectorLabel"
                     tools:listitem="@layout/agent_spinner_item_layout" />
 
                 <com.google.android.flexbox.FlexboxLayout
@@ -249,12 +300,16 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="10dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="10dp"
                         android:text="@string/point_of_interests_nearby_txt"
                         android:textColor="?attr/colorPrimaryVariant" />
 
                     <ImageButton
                         android:layout_width="wrap_content"
+                        app:tint="@color/white"
+                        app:backgroundTint="@color/dark_gray"
+                        android:paddingVertical="6.5dp"
                         android:layout_height="wrap_content"
                         android:onClick="@{() -> addPointOfInterest.setVisibility(View.VISIBLE)}"
                         android:src="@drawable/ic_add_24" />
@@ -290,7 +345,8 @@
                     android:id="@+id/photosScrollViewLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="10dp"
                     android:text="@string/photos_txt"
                     android:textColor="?attr/colorPrimaryVariant"
                     app:layout_constraintBottom_toTopOf="@id/photosScrollView"
