--- a/app/src/main/res/layout/map_window_layout.xml
+++ b/app/src/main/res/layout/map_window_layout.xml
@@ -1,72 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <import type="com.berete.realestatemanager.Utils" />
-
-        <import type="android.view.View" />
-
-        <variable
-            name="property"
-            type="com.berete.realestatemanager.domain.models.Property" />
-    </data>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="4dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/propertyPhoto"
+            android:layout_width="57dp"
+            android:layout_height="54dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-            <ImageView
-                android:id="@+id/photo"
-                android:layout_width="50dp"
-                android:layout_height="47dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/propertyType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textColor="?attr/colorPrimaryVariant"
+            app:layout_constraintBottom_toTopOf="@id/propertyPrice"
+            app:layout_constraintLeft_toRightOf="@id/propertyPhoto"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="APARTMENT" />
+
+        <TextView
+            android:id="@+id/propertyPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/colorSecondaryVariant"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/propertyType"
+            app:layout_constraintTop_toBottomOf="@id/propertyType"
+            tools:text="$18.000.000" />
 
 
-            <TextView
-                android:id="@+id/propertyType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@{property.type.name()}"
-                android:textColor="?attr/colorPrimaryVariant"
-                app:layout_constraintBottom_toTopOf="@id/propertyPrice"
-                app:layout_constraintLeft_toRightOf="@id/photo"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="APARTMENT" />
+        <ImageView
+            android:id="@+id/soldBadge"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
+            android:visibility="visible"
+            android:src="@drawable/sold"
+            app:layout_constraintLeft_toRightOf="@id/propertyPrice"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
-            <TextView
-                android:id="@+id/propertyPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{Utils.convertDoubleToCurrency(property.price)}"
-                android:textColor="?attr/colorSecondaryVariant"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="@id/propertyType"
-                app:layout_constraintTop_toBottomOf="@id/propertyType"
-                tools:text="$18.000.000" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-            <ImageView
-                android:layout_width="45dp"
-                android:layout_height="40dp"
-                android:src="@drawable/sold"
-                android:visibility="@{property.sold ? View.VISIBLE : View.GONE, default=gone}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</layout>
+</androidx.cardview.widget.CardView>
