--- a/app/src/main/res/drawable/unchecked_text_bg.xml
+++ b/app/src/main/res/drawable/unchecked_text_bg.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/blue_light"/>
-    <corners android:radius="15dp"/>
+    <corners android:radius="10dp"/>
+    <stroke android:width="3dp" android:color="@android:color/transparent"/>
 </shape>
